--- a/protec_ambiental/main/templates/main/home.html
+++ b/protec_ambiental/main/templates/main/home.html
@@ -1,1 +1,29 @@
-hello world
+{% extends 'main/layout.html' %}
+{% block body %}
+
+    <div class="container-fluid">
+      <div class="row">
+     	<br> 
+     	<br>
+     	<br>
+     	<br>
+     	<br>
+     	<br>
+     	<div class = "col-md-3"></div>	
+            <a href= "#"><div class="col-md-2 circulo1" align = "center" width="200" height="200">
+	              <br>
+	              <br>
+	              <br>
+	              <h2>OSHAS</h2>
+            </div></a>
+
+            <div class = "col-md-2"></div>
+
+            <a href="#"><div class="col-md-2 circulo2" align = "center" width="200" height="200" class="img-responsive">
+		          <br>
+		          <br>
+		          <h2>Ley Seguridad</h2>
+           	</div></a>
+
+        
+{% endblock %}
