--- a/protec_ambiental/main/templates/main/layout.html
+++ b/protec_ambiental/main/templates/main/layout.html
@@ -2,10 +2,54 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>{{title}}</title>
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <!--<link rel="stylesheet" href="http://getbootstrap.com/examples/dashboard/dashboard.css">-->
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
+    <style type="text/css">
+        .circulo1 {
+             width: 200px;
+             height: 200px;
+             -moz-border-radius: 50%;
+             -webkit-border-radius: 50%;
+             border-radius: 50%;
+             background: #37AE74;
+                }
+
+         .circulo2 {
+             width: 200px;
+             height: 200px;
+             -moz-border-radius: 50%;
+             -webkit-border-radius: 50%;
+             border-radius: 50%;
+             background: #378AAE;
+                }
+            
+    </style>
+    
+
+    <title>Protección Ambiental</title>
+
+    <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+
+    <link href="dashboard.css" rel="stylesheet">
+    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+  
+
+  </head>
+
+  <body>
+
+
 
     {% block more_styles %}
     {% endblock %}
@@ -14,104 +58,48 @@
 
 
 <body>
-
-<div class="container">
-    {% if messages %}
-            {% for message in messages %}
-                {% if message.tags == 'success' %}
-                    <div class="alert alert-success">
-                {% elif message.tags == 'warning' %}
-                    <div class="alert">
-                {% elif message.tags == 'error' %}
-                    <div class="alert alert-danger">
-                {% else %}
-                    <div class="alert alert-info">
-                {% endif %}
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                {{ message|safe }}
-                </div>
-            {% endfor %}
-    {% endif %}
-
-    <div class="row"  style="padding-top:30px">
-
-        <div class="col-md-2 sidebar">
-                <h2>BitHeart</h2>
-              
-            {% if request.user.is_authenticated %}                    
-                <ul class="nav nav-sidebar">
-                    {% if request.user.is_assistant %}
-                        <li class="{% if 'list' in request.path %}active{% endif %}">
-                                    <a href="{% url 'main:list_meeting' %}">{% trans 'requests'|capfirst %}</a>
-                        </li>
-                           
-                        <li>
-                            <a href="{% url 'main:list_patient' %}">{% trans 'patients'|capfirst %}</a>
-                        </li>
-
-
-                        <li>
-                            <a href="{% url 'main:list_doctor' %}">{% trans 'doctors'|capfirst %}</a>
-                        </li>
-                                              
-                        <hr>
-
-                        <li class="{% if 'edit' in request.path %}active{% endif %}">
-                                <a href="{% url 'main:edit_assistant' request.user.pk %}">{% trans 'edit my profile'|capfirst %}</a>
-                        </li>                    
-                    {% endif %}
-
-                    {% if request.user.is_doctor %}
-
-                            <li>
-                                    <a href="{% url 'main:list_meeting_doctor' %}">{% trans 'requests'|capfirst %}</a>
-                            </li>
-
-                            <li>
-                                    <a href="{% url 'main:edit_doctor' request.user.pk %}">{% trans 'edit my profile'|capfirst %}</a>
-                            </li>
-                            
-                            <li>
-                                    <a href="{% url 'main:list_institution_doctor' %}">{% trans 'institutions'|capfirst %}</a>
-                            </li>
-
-                    {% endif %}
-
-                    <li >
-                                <a href="{% url 'accounts:logout' %}">{% trans 'logout'|capfirst %}</a>
-                        </li>
-
-            </ul>
-            {% else %}
-            <ul>
-                <li><a href="#">{% trans 'Register'|capfirst %}</a></li>
-
-                <li><a href="{% url 'accounts:login' %}">{% trans 'Login'|capfirst %}</a></li>
-            </ul>
-            {% endif %}
-
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Project name</a>
         </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Dashboard</a></li>
+            <li><a href="#">Settings</a></li>
+            <li><a href="#">Profile</a></li>
+            <li><a href="#">Help</a></li>
+          </ul>
+          <form class="navbar-form navbar-right">
+            <input type="text" class="form-control" placeholder="Search...">
+          </form>
+        </div>
+      </div>
+    </nav>
 
-        <div class="col-md-10">
-            {% block body %}
+
+           {% block body %}
 
             {% endblock %}
-        </div>
-    </div>
-</div>
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+
+
         <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-        <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-        <!--<link rel="stylesheet" href="/resources/demos/style.css">-->
         <script>
               $( function() {
                 $( ".datepicker" ).datepicker({dateFormat: "yy-mm-dd"});
               } );
 
         </script>
+        
         {% block more_scripts %}
 
         {% endblock %}
