--- a/protec_ambiental/main/templates/main/home.html
+++ b/protec_ambiental/main/templates/main/home.html
@@ -10,7 +10,7 @@
      	<br>
      	<br>
      	<div class = "col-md-3"></div>	
-            <a href= "#"><div class="col-md-2 circulo1" align = "center" width="200" height="200">
+            <a href = "{% url 'main:oshas' %}"><div class="col-md-2 circulo1" align = "center" width="200" height="200">
 	              <br>
 	              <br>
 	              <br>
@@ -19,7 +19,7 @@
 
             <div class = "col-md-2"></div>
 
-            <a href="#"><div class="col-md-2 circulo2" align = "center" width="200" height="200" class="img-responsive">
+            <a href="{% url 'main:law' %}" ><div class="col-md-2 circulo2" align = "center" width="200" height="200" class="img-responsive">
 		          <br>
 		          <br>
 		          <h2>Ley Seguridad</h2>
