--- a/protec_ambiental/main/templates/main/home.html
+++ b/protec_ambiental/main/templates/main/home.html
@@ -10,7 +10,7 @@
      	<br>
      	<br>
      	<div class = "col-md-3"></div>	
-            <a href = "{% url 'main:oshas' %}"><div class="col-md-2 circulo1" align = "center" width="200" height="200">
+            <a href = "{% url 'main:panel' 4 %}"><div class="col-md-2 circulo1" align = "center" width="200" height="200">
 	              <br>
 	              <br>
 	              <br>
