--- a/protec_ambiental/files/templates/index.html
+++ b/protec_ambiental/files/templates/index.html
@@ -1,28 +1,11 @@
-<div class = "row">
-<div class = "col-md-2"></div>
-
-<div class = "col-md-8">
-    <hr>
-    <form action="." method="post" class="form-horizontal">
-
-        {% csrf_token %}
-        {% for f in form %}
-            <div class="form-group {% if f.errors %}has-error{% endif %}">
-                <label for="id_{{f.name}}" class="col-sm-2 control-label">{{ f.label }}</label>
-                <div class="col-sm-10">
-                    {{ f }}
-                    {% for error in f.errors %}
-                        <p class="help-block">{{ error }}</p>
-                    {% endfor %}
-                </div>
-            </div>
-        {% endfor %}
-        <div class= "pull-right">
-        <input type="submit" class="btn btn-primary" class="pull-right" name="_save">
-        </div>
+<html>
+<head>
+    <title></title>
+</head>
+<body>
+    <form action="" method="post" enctype="multipart/form-data">{% csrf_token %}
+            {{ form.as_p }}
+        <input type="submit" value="Submit">
     </form>
-
-</div>
-<div class = "col-md-2"></div>
-
-</div>
+</body>
+</html>
