--- a/src/main/templates/main/layout.html
+++ b/src/main/templates/main/layout.html
@@ -76,14 +76,19 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="{% url 'main:home' %}">Inicio</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Dashboard</a></li>
-            <li><a href="#">Settings</a></li>
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">Help</a></li>
+                {% if request.user.is_authenticated %}
+                    <li >
+                        <a href="{% url 'accounts:logout' %}">{% trans 'logout' %}</a>
+                    </li>
+                {% else %}
+                    <li>
+                        <a href="{% url 'accounts:login'%}">{% trans 'login'%}</a>
+                    </li>
+                {% endif %}
           </ul>
           <form class="navbar-form navbar-right">
             <input type="text" class="form-control" placeholder="Search...">
