--- a/src/main/templates/main/requirements/list.html
+++ b/src/main/templates/main/requirements/list.html
@@ -39,7 +39,7 @@
                                             aria-hidden="true">&times;</span></button>
                                 </div>
                                 <div class="modal-footer">
-                                    <form action="" method="post" enctype="multipart/form-data">{% csrf_token %}
+                                    <form action="{% url 'main:requirements_list' format.pk %}" method="post" enctype="multipart/form-data">{% csrf_token %}
                                         {{ format.form.as_p }}
                                         <input type="submit" value="Subir">
                                     </form>
