--- a/src/main/templates/main/requirements/list.html
+++ b/src/main/templates/main/requirements/list.html
@@ -56,7 +56,7 @@
                                         <tbody>
                                             {% for history in format.history %}
                                             <tr>
-                                                <td align ="left">{{ history.document }}</td>
+                                                <td align ="left"><a>{{ history.document }}</a></td>
                                                 <td align="left">{{ history.date_time }}</td>                                                
                                             </tr>       
                                             {% endfor %}
