--- a/src/main/templates/main/requirements/format.html
+++ b/src/main/templates/main/requirements/format.html
@@ -2,21 +2,100 @@
 
 {% block content %}
 
+<div class="row">
+<div class="col-md-3"></div>
+
 <table class="table table-bordered">
 
 <thead>
 	<tr>
-		<td><b></b></td>
-		<td><b></b></td>
+		<td><b>Formatos PDF</b></td>
+		<td><b>Opciones</b></td>
 	</tr>	
 </thead>
 
 <tbody>
+	{% for format in formats_pdf %}
 	<tr>
-
+		<td><a>{{ format.document }}</a></td>
+		<td>             
+            <button type="button" class="btn btn-primary" data-toggle="modal"
+                                data-target="#formatForm{{format.pk}}"
+                                data-whatever="r4">Actualizar
+           	</button>
+		</td>
 	</tr>
+	{% endfor %}
+</tbody>
+</table>
+
+<div class="col-md-1"></div>
+
+<table class="table table-bordered">
+<thead>
+	<tr>
+		<td><b>Formatos EXCEL</b></td>
+		<td><b>Opciones</b></td>	
+	</tr>	
+</thead>
+
+<tbody>
+	{% for format in formats_xlsx %}
+	<tr>
+		<td><a>{{ format.document }}</a></td>
+		<td>             
+            <button type="button" class="btn btn-primary" data-toggle="modal"
+                                data-target="#formatForm{{format.pk}}"
+                                data-whatever="r4">Actualizar
+           	</button>
+		</td>
+		                    <div class="modal fade" id="formatForm{{format.pk}}" tabindex="-1" role="dialog"
+                         aria-labelledby="exampleModalLabel">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal"
+                                            aria-label="Close"><span
+                                            aria-hidden="true">&times;</span></button>
+                                </div>
+                                <div class="modal-footer">
+                                    <form action="#" method="post" enctype="multipart/form-data">{% csrf_token %}
+                                        {{ format.form.as_p }}
+                                        <input type="submit" class="btn btn-primary" value="Subir">
+                                    </form>
+                                    <hr>
+                                    <table class="table">
+                                        <thead>
+                                            <tr>
+                                                <td align="left"><b>Documento</b></td>
+
+                                                <td align="left"><b>Fecha de modificación</b></td>
+                                            </tr>
+                                        </thead>
+
+                                        <tbody>
+                                            {% for history in format.history %}
+                                            <tr>
+                                                <td align ="left"><a>{{ history.document }}</a></td>
+                                                <td align="left">{{ history.date_time }}</td>                                                
+                                            </tr>       
+                                            {% endfor %}
+                                        </tbody>        
+                                    </table>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+	</tr>
+	{% endfor %}
+
 </tbody>
 
 </table>
+
+<div class="col-md-3"></div>
+</div>
+
 
 {% endblock %}
