--- a/src/main/templates/main/requirements/list.html
+++ b/src/main/templates/main/requirements/list.html
@@ -21,7 +21,7 @@
 
                 {% for format in requirement.formats %}
                 <li class="list-group-item">
-                    <a href="">{{ format.document }}</a>
+                    <a href="{% url 'main:format_list' format.pk %}">{{ format.document }}</a>
                     <div align="right">
                         <button type="button" class="btn btn-primary" data-toggle="modal"
                                 data-target="#formatForm{{format.pk}}"
