--- a/src/main/templates/main/accidents.html
+++ b/src/main/templates/main/accidents.html
@@ -1,5 +1,22 @@
 {% extends 'main/panel.html' %}
 
 {% block content %}
+     <div class="col-md-6">
+        <form action="" method="post">
+            {% csrf_token %}
+            {% for f in form %}
+                <div class="form-group {% if f.errors %}has-error{% endif %}">
+                    <label for="id_{{f.name}}" class="col-sm-2 control-label">{{ f.label }}</label>
+                    <div class="col-sm-10">
+                        {{ f }}
+                        {% for error in f.errors %}
+                            <p class="help-block">{{ error }}</p>
+                        {% endfor %}
+                    </div>
+                </div>
+            {% endfor %}
+            <button type="submit">Save</button>
+        </form>
+    </div>
 
 {% endblock %}
