--- a/src/main/templates/main/requirements/format.html
+++ b/src/main/templates/main/requirements/format.html
@@ -22,12 +22,54 @@
 	{% for format in formats_pdf %}
 	<tr>
 		<td><a href="#">{{ format.document }}</a></td>
-		<td>             
-            <button type="button" class="btn btn-primary" data-toggle="modal"
-                                data-target="#formatForm{{format.pk}}"
-                                data-whatever="r4">Actualizar
-           	</button>
-		</td>
+		<td> 
+            <div>            
+                <button type="button" class="btn btn-primary" data-toggle="modal"
+                                    data-target="#formatForm{{format.pk}}"
+                                    data-whatever="r4">Actualizar
+               	</button>
+		    </div>
+            <div class="modal fade" id="formatForm{{format.pk}}" tabindex="-1" role="dialog"
+                             aria-labelledby="exampleModalLabel">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal"
+                                                aria-label="Close"><span
+                                                aria-hidden="true">&times;</span></button>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <form action="{% url 'main:format_list' format.pk %}" method="post"
+                                              enctype="multipart/form-data">{% csrf_token %}
+                                            {{ format.form.as_p }}
+                                            <input type="submit" class="btn btn-primary" value="Subir">
+                                        </form>
+                                        <hr>
+                                        <table class="table">
+                                            <thead>
+                                            <tr>
+                                                <td align="left"><b>Documento</b></td>
+
+                                                <td align="left"><b>Fecha de modificación</b></td>
+                                            </tr>
+                                            </thead>
+
+                                            <tbody>
+                                            {% for history in format.history %}
+                                            <tr>
+                                                <td align="left"><a>{{ history.document }}</a></td>
+                                                <td align="left">{{ history.date_time }}</td>
+                                            </tr>
+                                            {% endfor %}
+                                            </tbody>
+                                        </table>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </td>
+
 	</tr>
 	{% endfor %}
 </tbody>
@@ -49,17 +91,61 @@
 
 	{% for format in formats_xlsx %}
 	<tr>
-		<td><a href="#">{{ format.document }}</a></td>
-		<td>             
-            <button type="button" class="btn btn-primary" data-toggle="modal"
-                                data-target="#formatForm{{format.pk}}"
-                                data-whatever="r4">Actualizar
-           	</button>
-		</td>
-	</tr>
+		<td><a href="#">{{ format.document.name }}</a></td>
+		<td>
+            <div>             
+                <button type="button" class="btn btn-primary" data-toggle="modal"
+                                    data-target="#formatForm{{format.pk}}"
+                                    data-whatever="r4">Actualizar
+               	</button>
+            </div>
+
+            <div class="modal fade" id="formatForm{{format.pk}}" tabindex="-1" role="dialog"
+                             aria-labelledby="exampleModalLabel">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal"
+                                                aria-label="Close"><span
+                                                aria-hidden="true">&times;</span></button>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <form action="{% url 'main:format_list' format.pk %}" method="post"
+                                              enctype="multipart/form-data">{% csrf_token %}
+                                            {{ format.form.as_p }}
+                                            <input type="submit" class="btn btn-primary" value="Subir">
+                                        </form>
+                                        <hr>
+                                        <table class="table">
+                                            <thead>
+                                            <tr>
+                                                <td align="left"><b>Documento</b></td>
+
+                                                <td align="left"><b>Fecha de modificación</b></td>
+                                            </tr>
+                                            </thead>
+
+                                            <tbody>
+                                            {% for history in format.history %}
+                                            <tr>
+                                                <td align="left"><a>{{ history.document }}</a></td>
+                                                <td align="left">{{ history.date_time }}</td>
+                                            </tr>
+                                            {% endfor %}
+                                            </tbody>
+                                        </table>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+        </td>
+
+    </tr>
 	{% endfor %}
 
 </tbody>
+
 
 </table>
 
