redirect and fix login

--- a/src/accounts/templates/accounts/login.html
+++ b/src/accounts/templates/accounts/login.html
@@ -6,7 +6,7 @@
 {% block nav %}
 {% endblock%}
 
-{% block body %}
+{% block content%}
 
 <section class="contact-container">
     <div class="container">
