--- a/src/main/templates/main/home.html
+++ b/src/main/templates/main/home.html
@@ -1,5 +1,7 @@
 {% extends 'main/layout_with_out_nav.html' %}
 {% block content %}
+{% if user.is_authenticated %}
+
 
 <div class="container-fluid">
     <div class="row">
@@ -30,4 +32,5 @@
         </a>
     </div>
 </div>
+    {% endif %}
 {% endblock %}
