--- a/src/main/templates/main/layout.html
+++ b/src/main/templates/main/layout.html
@@ -66,7 +66,7 @@
         </li>
     </ul>
 </header>
-
+{% if user.is_authenticated %}
 <div id="sidebar-nav">
     <ul id="dashboard-menu">
         <li class="requirement">
@@ -101,7 +101,7 @@
         </li>
     </ul>
 </div>
-
+{% endif %}
 <div class="content">
     {% block content %}
 
