--- a/src/main/templates/main/requirements/format.html
+++ b/src/main/templates/main/requirements/format.html
@@ -2,11 +2,10 @@
 
 {% block content %}
 
-<br>
-<br>
-<br>
-<div class="row">
-<div class="col-sm-1"></div>
+<div id="pad-wrapper" class="users-list">
+    <div class="row header">
+        <h3>{{ title }}</h3>
+    </div>
 
 <div class="col-md-5">
 <table class="table table-bordered">
@@ -76,9 +75,9 @@
 </table>
 </div>
 
-<div class="col-sm-2"></div>
+<div class="col-md-1"></div>
 
-<div class="col-md-5">
+<div class="col-md-4">
 <table class="table table-bordered">
 <thead>
 	<tr>
