--- a/src/main/templates/main/accidents.html
+++ b/src/main/templates/main/accidents.html
@@ -1,22 +1,24 @@
 {% extends 'main/panel.html' %}
 
 {% block content %}
+    <div class="col-md-12" style="text-align: center"><h1>Accidents</h1></div>
      <div class="col-md-6">
+        {% if message %}
+            <div class="alert alert-danger alert-dismissible" role="alert">
+                <strong>Error!</strong> {{ message }} {{ response }}
+            </div>
+        {% endif %}
         <form action="" method="post">
             {% csrf_token %}
-            {% for f in form %}
-                <div class="form-group {% if f.errors %}has-error{% endif %}">
-                    <label for="id_{{f.name}}" class="col-sm-2 control-label">{{ f.label }}</label>
-                    <div class="col-sm-10">
-                        {{ f }}
-                        {% for error in f.errors %}
-                            <p class="help-block">{{ error }}</p>
-                        {% endfor %}
-                    </div>
-                </div>
+            {% for field in form %}
+            {% include 'main/hooks/field_with_label.html' with field=field %}
             {% endfor %}
+
             <button type="submit">Save</button>
         </form>
+    </div>
+    <div class="col md-6">
+
     </div>
 
 {% endblock %}
