--- a/src/main/templates/main/accidents.html
+++ b/src/main/templates/main/accidents.html
@@ -2,4 +2,12 @@
 
 {% block content %}
 
+<div id="pad-wrapper" class="users-list">
+    <div class="row header">
+        <h3>Accidentes</h3>
+    </div>
+
+    <br>
+</div>
+
 {% endblock %}
