--- a/src/main/templates/main/hooks/form.html
+++ b/src/main/templates/main/hooks/form.html
@@ -1,10 +1,34 @@
 {% load i18n %}
+{% csrf_token %}
 
-<form action="" method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {% for field in form %}
-        {% include 'website/hooks/field_with_label.html' with field=field %}
-    {% endfor %}
+<div id="pad-wrapper" class="new-user">
+    <div class="row header">
+        <div class="col-md-12">
+            <h3>{{title|capfirst}}</h3>
+        </div>
+    </div>
+    <div class="row form-wrapper">
+        <div class="col-md-9 with-sidebar">
 
-    <input type="submit" value="{% trans 'send'|capfirst %}">
-</form>
+            <form action="." method="post" class="form-horizontal" enctype="multipart/form-data">
+                {% csrf_token %}
+                {% for f in form %}
+                <div class="form-group {% if f.errors %}has-error{% endif %}">
+                    <label for="id_{{f.name}}" class="col-sm-2 control-label">{{ f.label|capfirst }}</label>
+                    <div class="col-sm-10">
+                        {{ f }}
+                        {% for error in f.errors %}
+                        <p class="help-block">{{ error }}</p>
+                        {% endfor %}
+                    </div>
+                </div>
+                {% endfor %}
+                <div class="pull-right">
+                    <input type="submit" class="btn btn-primary" class="pull-right" value="{{save_text|default:'Save'}}"
+                           name="_save">
+                </div>
+            </form>
+
+        </div>
+    </div>
+</div>
