--- a/src/main/templates/main/layout.html
+++ b/src/main/templates/main/layout.html
@@ -8,7 +8,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- bootstrap -->
-    <link href="{% static 'main/css/bootstrap/bootstrap.css'%}" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!--<link href="{% static 'main/css/bootstrap/bootstrap.css'%}" rel="stylesheet"/>-->
     <link href="{% static 'main/css/bootstrap/bootstrap-overrides.css'%}" type="text/css" rel="stylesheet"/>
 
     <!-- libraries -->
@@ -23,6 +24,9 @@
     <!-- this page specific styles -->
     <link rel="stylesheet" href="{% static 'main/css/compiled/index.css'%}" type="text/css" media="screen"/>
 
+
+    {% block more_styles %}
+    {% endblock %}
     <!-- open sans font -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800'
           rel='stylesheet' type='text/css'/>
@@ -35,8 +39,6 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    {% block more_styles %}
-    {% endblock %}
 
 </head>
 
@@ -66,7 +68,7 @@
         </li>
     </ul>
 </header>
-{% if user.is_authenticated %}
+
 <div id="sidebar-nav">
     <ul id="dashboard-menu">
         <li class="requirement">
@@ -76,7 +78,7 @@
             </a>
         </li>
         <li class="calendar">
-            <a href="{% url 'fullcalendar:calendar_list' %}">
+            <a href="{% url 'fullcalendar:list' %}">
                 <i class="icon-calendar-empty"></i>
                 <span>Calendarios</span>
             </a>
@@ -101,7 +103,7 @@
         </li>
     </ul>
 </div>
-{% endif %}
+
 <div class="content">
     {% block content %}
 
@@ -121,6 +123,7 @@
         $(li_selector).addClass("active");
         $(li_selector).prepend('<div class="pointer"><div class="arrow"></div><div class="arrow_border"></div></div>');
     }
+
 
 
 </script>
