--- a/src/fullcalendar/templates/fullcalendar/list.html
+++ b/src/fullcalendar/templates/fullcalendar/list.html
@@ -6,7 +6,7 @@
 {% block content %}
 
 <div id="pad-wrapper" class="users-list">
-    <div class="table-wrapper products-table section">
+    <div class="table-wrapper products-table">
         <div class="row header">
             <h3>Calendarios</h3>
             <div class="col-md-10 col-sm-12 col-xs-12 pull-right">
