--- a/src/fullcalendar/templates/fullcalendar/calendar.html
+++ b/src/fullcalendar/templates/fullcalendar/calendar.html
@@ -5,18 +5,19 @@
 {% load widget_tweaks %}
 
 {% block more_styles %}
-<link href="{% static 'main/css/lib/fullcalendar.css'%}" rel='stylesheet'/>
-<link href="{% static 'main/css/lib/fullcalendar.print.css'%}" rel='stylesheet' media='print'/>
 
 <!-- this page specific styles -->
-<link rel="stylesheet" href="css/compiled/calendar.css" type="text/css" media="screen"/>
 
 
 <link rel="stylesheet" type="text/css"
       href="{% static 'fullcalendar/plugins/bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css' %}"/>
-<!--<link href="{% static 'fullcalendar/plugins/fullcalendar/fullcalendar.min.css' %}" rel="stylesheet"/>-->
-<!--<link href="{% static 'fullcalendar/fullcalendar/lib/cupertino/jquery-ui.min.css' %}" rel="stylesheet"/>-->
+<link href="https://fullcalendar.io/js/fullcalendar-3.1.0/fullcalendar.min.css" rel="stylesheet"/>
+<link href="https://fullcalendar.io/js/fullcalendar-3.1.0/fullcalendar.print.min.css" rel="stylesheet" media='print'/>
+<link href="{% static 'fullcalendar/fullcalendar/lib/cupertino/jquery-ui.min.css' %}" rel="stylesheet"/>
 
+<!--<link href="{% static 'main/css/lib/fullcalendar.css'%}" rel='stylesheet'/>-->
+<!--<link href="{% static 'main/css/lib/fullcalendar.print.css'%}" rel='stylesheet' media='print'/>-->
+<!--<link rel="stylesheet" href="css/compiled/calendar.css" type="text/css" media="screen"/>-->
 {% endblock %}
 
 {% block page_toolbar %}
@@ -29,13 +30,11 @@
 {% endblock %}
 
 {% block content %}
-<div id="pad-wrapper">
-    <div class="row calendar-wrapper">
-        <div class="col-md-12">
-            <!-- div that fullcalendar plugin uses  -->
-            <div id='calendar'></div>
-        </div>
+<div id="pad-wrapper" class="new-user">
+    <div class="col-md-12 text-center">
+        <h3>calendario <b>{{calendar.title}}</b></h3>
     </div>
+    <div id='calendar'></div>
 </div>
 <div class="modal fade" id="event" tabindex="-1" role="basic" aria-hidden="true" style="display: none;">
     <div class="modal-dialog">
@@ -113,10 +112,12 @@
 {% endblock %}
 
 {% block more_scripts %}
-<script src="{% static 'fullcalendar/plugins/moment.min.js' %}"></script>
+<script src="https://fullcalendar.io/js/fullcalendar-3.1.0/lib/moment.min.js"></script>
 <script type="text/javascript"
         src="{% static 'fullcalendar/plugins/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js' %}"></script>
-<script src="{% static 'main/js/fullcalendar.min.js' %}"></script>
+<!--<script src="{% static 'main/js/fullcalendar.min.js' %}"></script>-->
+<script src="https://fullcalendar.io/js/fullcalendar-3.1.0/fullcalendar.min.js"></script>
+<script src="https://fullcalendar.io/js/fullcalendar-3.1.0/locale/es.js"></script>
 <script>
         $(document).ready(function () {
             var format = 'DD/MM/YYYY hh:mm a';
@@ -275,8 +276,9 @@
                 minLength: 3,
                 appendTo: "#event-form"
             });
-        });
 
+            active_menu('.calendar');
+        });
 
 
 
