--- a/src/main/templates/main/home.html
+++ b/src/main/templates/main/home.html
@@ -1,8 +1,15 @@
 {% extends 'main/layout_with_out_nav.html' %}
+
+{% block more_styles %}
+<style>
+    .content{
+        margin-left:0px;
+    }
+</style>
+{% endblock %}
+
 {% block content %}
 {% if user.is_authenticated %}
-
-
 <div class="container-fluid">
     <div class="row">
         <br>
