--- a/src/main/templates/main/layout_with_out_nav.html
+++ b/src/main/templates/main/layout_with_out_nav.html
@@ -1,106 +1,103 @@
 {% load i18n %}
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
 
     <title>Protección Ambiental</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="http://getbootstrap.com/examples/dashboard/dashboard.css">
+    <!--<link href="{% static 'main/css/bootstrap/bootstrap.css'%}" rel="stylesheet"/>-->
+    <link href="{% static 'main/css/bootstrap/bootstrap-overrides.css'%}" type="text/css" rel="stylesheet"/>
 
-    <meta charset="utf-8">
-    <style type="text/css">
-        .circulo1 {
-             width: 200px;
-             height: 200px;
-             -moz-border-radius: 50%;
-             -webkit-border-radius: 50%;
-             border-radius: 50%;
-             background: #37AE74;
-                }
+    <!-- libraries -->
+    <link href="{% static 'main/css/lib/jquery-ui-1.10.2.custom.css'%}" rel="stylesheet" type="text/css"/>
+    <link href="{% static 'main/css/lib/font-awesome.css'%}" type="text/css" rel="stylesheet"/>
 
-         .circulo2 {
-             width: 200px;
-             height: 200px;
-             -moz-border-radius: 50%;
-             -webkit-border-radius: 50%;
-             border-radius: 50%;
-             background: #378AAE;
-                }
+    <!-- global styles -->
+    <link rel="stylesheet" type="text/css" href="{% static 'main/css/compiled/layout.css'%}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'main/css/compiled/elements.css'%}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'main/css/compiled/icons.css'%}"/>
 
-         a:link {
-                color: #000000;
-                text-decoration: none;
-            }
+    <!-- this page specific styles -->
+    <link rel="stylesheet" href="{% static 'main/css/compiled/index.css'%}" type="text/css" media="screen"/>
 
 
-
-
-    </style>
     {% block more_styles %}
     {% endblock %}
+    <!-- open sans font -->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800'
+          rel='stylesheet' type='text/css'/>
+
+    <!-- lato font -->
+    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic'
+          rel='stylesheet' type='text/css'/>
+
+    <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
 
 </head>
 
 
 <body>
-<nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                    aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="{% url 'main:home' %}">Inicio</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right">
-                {% if request.user.is_authenticated %}
-                <li>
-                    <a href="{% url 'accounts:logout' %}">{% trans 'logout' %}</a>
-                </li>
-                {% else %}
-                <li>
-                    <a href="{% url 'accounts:login'%}">{% trans 'login'%}</a>
-                </li>
-                {% endif %}
-            </ul>
-            <form class="navbar-form navbar-right">
-                <input type="text" class="form-control" placeholder="Search...">
-            </form>
-        </div>
+<header class="navbar navbar-inverse" role="banner">
+    <div class="navbar-header">
+        <button class="navbar-toggle" type="button" data-toggle="collapse" id="menu-toggler">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="index.html">
+            <img src="img/logo.png" alt="logo"/>
+        </a>
     </div>
-</nav>
+    <ul class="nav navbar-nav pull-right hidden-xs">
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle hidden-xs hidden-sm" data-toggle="dropdown">
+                {{request.user.first_name}}
+                <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+                <li><a href="{% url 'accounts:logout' %}">{% trans 'logout' %}</a></li>
+            </ul>
+        </li>
+    </ul>
+</header>
 
-
-{% block content %}
-
+{% block sidebar %}
 {% endblock %}
 
+<div class="content">
+    {% block content %}
+
+    {% endblock %}
+</div>
 
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 <script>
-              $( function() {
-                $( ".datepicker" ).datepicker({dateFormat: "yy-mm-dd"});
-              } );
+      $( function() {
+        $( ".datepicker" ).datepicker({dateFormat: "yy-mm-dd"});
+      } );
+
+    function active_menu(li_selector){
+        $(li_selector).addClass("active");
+        $(li_selector).prepend('<div class="pointer"><div class="arrow"></div><div class="arrow_border"></div></div>');
+    }
+
+
 
 
 
 
 </script>
-
 {% block more_scripts %}
 
 {% endblock %}
