--- a/src/main/templates/main/ley_seguridad.html
+++ b/src/main/templates/main/ley_seguridad.html
@@ -1,5 +1,5 @@
-{% extends 'main/layout.html' %}
-{% block body %}
+{% extends 'main/layout_form.html' %}
+{% block content %}
 
 
 <div class=" main">
