update accidents by bicho

--- a/src/main/templates/main/layout.html
+++ b/src/main/templates/main/layout.html
@@ -16,7 +16,7 @@
             </a>
         </li>
         <li class="accidents">
-            <a href="{% url 'main:accidents' user.company.pk %}">
+            <a href="{% url 'main:accident_list' user.company.pk %}">
                 <i class="icon-heart-empty"></i>
                 <span>Accidentes</span>
             </a>
