template formats title modify

--- a/src/main/templates/main/requirements/format.html
+++ b/src/main/templates/main/requirements/format.html
@@ -16,7 +16,7 @@
 
                     <thead>
                     <tr>
-                        <td><b>Formatos PDF</b></td>
+                        <td><b>Planes, Programas y Procedimientos</b></td>
                         <td><b>Opciones</b></td>
                     </tr>
                     </thead>
@@ -85,7 +85,7 @@
                 <table class="table table-bordered">
                     <thead>
                     <tr>
-                        <td><b>Formatos EXCEL</b></td>
+                        <td><b>Registros y Evidencias</b></td>
                         <td><b>Opciones</b></td>
 
                     </thead>
