--- a/src/main/templates/main/layout_with_out_nav.html
+++ b/src/main/templates/main/layout_with_out_nav.html
@@ -68,9 +68,11 @@
         </li>
     </ul>
 </header>
+<div id="sidebar-nav">
+            {% block sidebar %}
+            {% endblock %}
 
-{% block sidebar %}
-{% endblock %}
+</div>
 
 <div class="content">
     {% block content %}
@@ -82,6 +84,7 @@
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<script src="{% static 'main/js/theme.js' %}"></script>
 <script>
       $( function() {
         $( ".datepicker" ).datepicker({dateFormat: "yy-mm-dd"});
