--- a/src/main/templates/main/home.html
+++ b/src/main/templates/main/home.html
@@ -19,7 +19,7 @@
         <br>
         <br>
         <div class="col-md-3"></div>
-        <a href="{% url 'main:panel' user.company.pk %}">
+            <a href="{% url 'main:panel' company_jra_slug %}">
             <div class="col-md-2 circulo1" align="center" width="200" height="200">
                 <br>
                 <br>
