--- a/src/main/templates/main/layout.html
+++ b/src/main/templates/main/layout.html
@@ -5,7 +5,7 @@
     <ul id="dashboard-menu">
         <li class="">
             <a style="color: #000;"><i class="icon-home"></i>
-                <span>{{user.company.name}}</span>
+                <span>{{company.name}}</span>
             </a>
         </li>
         <!--<li class="">-->
@@ -14,7 +14,7 @@
         <!--<br>-->
         <!--</li>-->
         <li class="requirement">
-            <a href="{% url 'main:requirements_list' user.company.pk %}">
+            <a href="{% url 'main:requirements_list' company.slug %}">
                 <i class="icon-tasks"></i>
                 <span>Requisitos</span>
             </a>
@@ -26,7 +26,7 @@
             </a>
         </li>
         <li class="accidents">
-            <a href="{% url 'main:accident_list' user.company.pk %}">
+            <a href="{% url 'main:accident_list' company.slug %}">
                 <i class="icon-heart-empty"></i>
                 <span>Accidentes</span>
             </a>
@@ -38,7 +38,7 @@
             </a>
         </li>
         <li class="{% if 'reports' in request.path %}active{% endif %}">
-            <a href="{% url 'main:reports' user.company.pk %}">
+            <a href="{% url 'main:reports' company.slug %}">
                 <i class="icon-signal"></i>
                 <span>Reportes</span>
             </a>
