--- a/src/main/templates/main/home.html
+++ b/src/main/templates/main/home.html
@@ -24,7 +24,7 @@
                 <br>
                 <br>
                 <br>
-                <h2>OSHAS</h2>
+                <h2>OSHAS 18001:2007</h2>
             </div>
         </a>
 
@@ -34,7 +34,7 @@
             <div class="col-md-2 circulo2" align="center" width="200" height="200" class="img-responsive">
                 <br>
                 <br>
-                <h2>Ley Seguridad</h2>
+                <h2>Ley 29783 Seguridad y Salud en el Trabajo</h2>
             </div>
         </a>
     </div>
