--- a/src/main/templates/main/company/form.html
+++ b/src/main/templates/main/company/form.html
@@ -1,4 +1,4 @@
-{% extends 'main/panel.html' %}
+{% extends 'main/layout_with_out_nav.html' %}
 
 {% block content %}
 <div id="pad-wrapper" class="new-user">
