--- a/src/fullcalendar/templates/fullcalendar/calendar.html
+++ b/src/fullcalendar/templates/fullcalendar/calendar.html
@@ -4,7 +4,7 @@
 {% load i18n %}
 {% load widget_tweaks %}
 
-{% block more_styles %}
+{% block styles %}
 
 <!-- this page specific styles -->
 
@@ -15,9 +15,7 @@
 <link href="https://fullcalendar.io/js/fullcalendar-3.1.0/fullcalendar.print.min.css" rel="stylesheet" media='print'/>
 <link href="{% static 'fullcalendar/fullcalendar/lib/cupertino/jquery-ui.min.css' %}" rel="stylesheet"/>
 
-<!--<link href="{% static 'main/css/lib/fullcalendar.css'%}" rel='stylesheet'/>-->
-<!--<link href="{% static 'main/css/lib/fullcalendar.print.css'%}" rel='stylesheet' media='print'/>-->
-<!--<link rel="stylesheet" href="css/compiled/calendar.css" type="text/css" media="screen"/>-->
+
 {% endblock %}
 
 {% block page_toolbar %}
@@ -111,7 +109,7 @@
 </div>
 {% endblock %}
 
-{% block more_scripts %}
+{% block scripts %}
 <script src="https://fullcalendar.io/js/fullcalendar-3.1.0/lib/moment.min.js"></script>
 <script type="text/javascript"
         src="{% static 'fullcalendar/plugins/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js' %}"></script>
