--- a/src/main/templates/main/accidents/list.html
+++ b/src/main/templates/main/accidents/list.html
@@ -1,10 +1,56 @@
 {% extends 'main/layout.html' %}
 {% load static %}
 {% block more_styles %}
-<link rel="stylesheet" type="text/css" href="{% static 'main/css/compiled/tables.css'%}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'main/css/compiled/tables.css'%}"/>
+{% endblock %}
+{% block sidebar %}
+    <div id="sidebar-nav">
+         <ul id="dashboard-menu">
+            <li >
+
+                <a href="{% url 'main:panel' company_slug %}"><i class="icon-home"></i>
+                    <span>{{company.name}}</span>
+                </a>
+            </li>
+            <li>
+                <a href="{% url 'main:requirements_list' company.slug %}">
+                    <i class="icon-tasks"></i>
+                    <span>Requisitos</span>
+                </a>
+            </li>
+            <li >
+                <a href="{% url 'fullcalendar:list' company.slug %}">
+                    <i class="icon-calendar-empty"></i>
+                    <span>Calendarios</span>
+                </a>
+            </li>
+            <li class="active">
+                <div class="pointer">
+                        <div class="arrow"></div>
+                        <div class="arrow_border"></div>
+                    </div>
+                <a href="{% url 'main:accident_list' company.slug %}">
+                    <i class="icon-heart-empty"></i>
+                    <span>Accidentes</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="icon-comments-alt"></i>
+                    <span>Acuerdo SST</span>
+                </a>
+            </li>
+            <li class="{% if 'reports' in request.path %}active{% endif %}">
+                <a href="{% url 'main:reports' company.slug %}">
+                    <i class="icon-signal"></i>
+                    <span>Reportes</span>
+                </a>
+            </li>
+        </ul>
+    </div>
 {% endblock %}
 {% block content %}
-<div id="pad-wrapper" class="users-list">
+    <div id="pad-wrapper" class="users-list">
     <div class="table-wrapper products-table">
         <div class="row header">
             <h3>Accidentes</h3>
@@ -51,11 +97,4 @@
 {% endblock%}
 
 {% block more_scripts %}
-<script>
-$( function() {
-    active_menu('.accidents');
-});
-
-
-</script>
 {% endblock%}
