--- a/src/main/templates/main/company/form.html
+++ b/src/main/templates/main/company/form.html
@@ -9,6 +9,11 @@
     </div>
     <div class="row form-wrapper">
         <div class="col-md-9 with-sidebar">
+            {% if message %}
+                <div class="alert alert-danger alert-dismissible" role="alert">
+                    <strong>Error!</strong> {{ message }} {{ response }}
+                </div>
+            {% endif %}
             <form action="." method="post" class="form-horizontal" enctype="multipart/form-data">
                 {% csrf_token %}
                 {% for f in company_form %}
