--- a/src/main/templates/main/layout.html
+++ b/src/main/templates/main/layout.html
@@ -1,48 +1,54 @@
 {% extends 'main/layout_with_out_nav.html' %}
-
+{% load static %}
+{% block styles %}
+{% endblock %}
+{% block nav %}
+    <li class="settings hidden-xs hidden-sm">
+                    <a href="{% url 'main:configuration' company_slug %}" role="button">
+                        <i class="icon-cog"></i>
+                    </a>
+            </li>
+{% endblock %}
 {% block sidebar %}
-
-    <ul id="dashboard-menu">
-        <li class="">
-            <a style="color: #000;"><i class="icon-home"></i>
-                <span>{{company.name}}</span>
-            </a>
-        </li>
-        <!--<li class="">-->
-        <!--<br>-->
-        <!--<br>-->
-        <!--<br>-->
-        <!--</li>-->
-        <li class="requirement">
-            <a href="{% url 'main:requirements_list' company.slug %}">
-                <i class="icon-tasks"></i>
-                <span>Requisitos</span>
-            </a>
-        </li>
-        <li class="calendar">
-            <a href="{% url 'fullcalendar:list' %}">
-                <i class="icon-calendar-empty"></i>
-                <span>Calendarios</span>
-            </a>
-        </li>
-        <li class="accidents">
-            <a href="{% url 'main:accident_list' company.slug %}">
-                <i class="icon-heart-empty"></i>
-                <span>Accidentes</span>
-            </a>
-        </li>
-        <li class="deactive">
-            <a href="#">
-                <i class="icon-comments-alt"></i>
-                <span>Acuerdo SST</span>
-            </a>
-        </li>
-        <li class="{% if 'reports' in request.path %}active{% endif %}">
-            <a href="{% url 'main:reports' company.slug %}">
-                <i class="icon-signal"></i>
-                <span>Reportes</span>
-            </a>
-        </li>
-    </ul>
-
+    <div id="sidebar-nav">
+         <ul id="dashboard-menu">
+            <li>
+                <a href="{% url 'main:panel' company_slug %}"><i class="icon-home"></i>
+                    <span>{{company.name}}</span>
+                </a>
+            </li>
+            <li>
+                <a href="{% url 'main:requirements_list' company.slug %}">
+                    <i class="icon-tasks"></i>
+                    <span>Requisitos</span>
+                </a>
+            </li>
+            <li >
+                <a href="{% url 'fullcalendar:list' company.slug %}">
+                    <i class="icon-calendar-empty"></i>
+                    <span>Calendarios</span>
+                </a>
+            </li>
+            <li >
+                <a href="{% url 'main:accident_list' company.slug %}">
+                    <i class="icon-heart-empty"></i>
+                    <span>Accidentes</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="icon-comments-alt"></i>
+                    <span>Acuerdo SST</span>
+                </a>
+            </li>
+            <li>
+                <a href="{% url 'main:reports' company.slug %}">
+                    <i class="icon-signal"></i>
+                    <span>Reportes</span>
+                </a>
+            </li>
+        </ul>
+    </div>
+{% endblock %}
+{% block scripts %}
 {% endblock %}
