--- a/src/main/templates/main/layout_with_out_nav.html
+++ b/src/main/templates/main/layout_with_out_nav.html
@@ -7,10 +7,33 @@
     <title>Protección Ambiental</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+    <!-- bootstrap -->
+
+    <link href="{% static 'main/css/bootstrap/bootstrap-overrides.css' %}" type="text/css" rel="stylesheet" />
+
+    <!-- libraries -->
+    <link href="{% static 'main/css/lib/jquery-ui-1.10.2.custom.css'%}" rel="stylesheet" type="text/css" />
+    <link href="{% static 'main/css/lib/font-awesome.css' %}" type="text/css" rel="stylesheet" />
+
+    <!-- global styles -->
+    <link rel="stylesheet" type="text/css" href="{% static 'main/css/compiled/layout.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'main/css/compiled/elements.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'main/css/compiled/icons.css' %}" />
+
+    <!-- this page specific styles -->
+    <link rel="stylesheet" href="{% static 'main/css/compiled/index.css' %}" type="text/css" media="screen" />
+
+    <!-- open sans font -->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css' />
+
+    <!-- lato font -->
+    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css' />
+
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <!--<link href="{% static 'main/css/bootstrap/bootstrap.css'%}" rel="stylesheet"/>-->
-    <link href="{% static 'main/css/bootstrap/bootstrap-overrides.css'%}" type="text/css" rel="stylesheet"/>
+
 
     <!-- libraries -->
     <link href="{% static 'main/css/lib/jquery-ui-1.10.2.custom.css'%}" rel="stylesheet" type="text/css"/>
@@ -25,7 +48,7 @@
     <link rel="stylesheet" href="{% static 'main/css/compiled/index.css'%}" type="text/css" media="screen"/>
 
 
-    {% block more_styles %}
+    {% block styles %}
     {% endblock %}
     <!-- open sans font -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800'
@@ -41,69 +64,181 @@
 
 
 </head>
-
-
 <body>
-<header class="navbar navbar-inverse" role="banner">
-    <div class="navbar-header">
-        <button class="navbar-toggle" type="button" data-toggle="collapse" id="menu-toggler">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="/">
-            <img src="{% static 'main/img/logo.png' %}" style="max-height: 34px;" alt="Pro"/>
-        </a>
-    </div>
-    <ul class="nav navbar-nav pull-right hidden-xs">
-        <li class="dropdown">
-            <a href="#" class="dropdown-toggle hidden-xs hidden-sm" data-toggle="dropdown">
-                {{request.user.first_name}}
-                <b class="caret"></b>
+    <header class="navbar navbar-inverse" role="banner">
+        <div class="navbar-header">
+            <button class="navbar-toggle" type="button" data-toggle="collapse" id="menu-toggler">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">
+                <img src="{% static 'main/img/logo.png' %}" style="max-height: 34px;" alt="Pro"/>
             </a>
-            <ul class="dropdown-menu">
-                <li><a href="{% url 'accounts:logout' %}">{% trans 'logout' %}</a></li>
-            </ul>
-        </li>
-    </ul>
-</header>
-<div id="sidebar-nav">
-            {% block sidebar %}
+        </div>
+
+        <ul class="nav navbar-nav pull-right hidden-xs">
+            {% block nav %}
             {% endblock %}
 
-</div>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle hidden-xs hidden-sm" data-toggle="dropdown">
+                    {% if request.user.is_superuser%}
+                        admin
+                    {% else %}
+                        {{request.user.first_name}}
+                    {% endif %}
+                    <b class="caret"></b>
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a href="{% url 'accounts:logout' %}">{% trans 'logout' %}</a></li>
+                </ul>
+            </li>
 
-<div class="content">
-    {% block content %}
-
-    {% endblock %}
-</div>
-
-<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-<script src="{% static 'main/js/theme.js' %}"></script>
-<script>
-      $( function() {
-        $( ".datepicker" ).datepicker({dateFormat: "yy-mm-dd"});
-      } );
-
-    function active_menu(li_selector){
-        $(li_selector).addClass("active");
-        $(li_selector).prepend('<div class="pointer"><div class="arrow"></div><div class="arrow_border"></div></div>');
-    }
+        </ul>
+    </header>
+    {% block sidebar %}
+    {%  endblock %}
 
 
+    <div class="content">
+        {% block content %}
 
-
-
+        {% endblock %}
+    </div>
 
 
 
-</script>
-{% block more_scripts %}
+
+
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="{% static 'main/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'main/js/jquery-ui-1.10.2.custom.min.js' %}"></script>
+    <!-- knob -->
+    <script src="{% static 'main/js/jquery.knob.js' %}"></script>
+    <!-- flot charts -->
+    <script src="{% static 'main/js/jquery.flot.js' %}"></script>
+    <script src="{% static 'main/js/jquery.flot.stack.js' %}"></script>
+    <script src="{% static 'main/js/jquery.flot.resize.js' %}"></script>
+    <script src="{% static 'main/js/theme.js' %}"></script>
+
+
+    <script type="text/javascript">
+        $(function () {
+
+            // jQuery Knobs
+            $(".knob").knob();
+
+
+
+            // jQuery UI Sliders
+            $(".slider-sample1").slider({
+                value: 100,
+                min: 1,
+                max: 500
+            });
+            $(".slider-sample2").slider({
+                range: "min",
+                value: 130,
+                min: 1,
+                max: 500
+            });
+            $(".slider-sample3").slider({
+                range: true,
+                min: 0,
+                max: 500,
+                values: [ 40, 170 ],
+            });
+
+
+
+            // jQuery Flot Chart
+            var visits = [[1, 50], [2, 40], [3, 45], [4, 23],[5, 55],[6, 65],[7, 61],[8, 70],[9, 65],[10, 75],[11, 57],[12, 59]];
+            var visitors = [[1, 25], [2, 50], [3, 23], [4, 48],[5, 38],[6, 40],[7, 47],[8, 55],[9, 43],[10,50],[11,47],[12, 39]];
+
+            var plot = $.plot($("#statsChart"),
+                [ { data: visits, label: "Signups"},
+                 { data: visitors, label: "Visits" }], {
+                    series: {
+                        lines: { show: true,
+                                lineWidth: 1,
+                                fill: true,
+                                fillColor: { colors: [ { opacity: 0.1 }, { opacity: 0.13 } ] }
+                             },
+                        points: { show: true,
+                                 lineWidth: 2,
+                                 radius: 3
+                             },
+                        shadowSize: 0,
+                        stack: true
+                    },
+                    grid: { hoverable: true,
+                           clickable: true,
+                           tickColor: "#f9f9f9",
+                           borderWidth: 0
+                        },
+                    legend: {
+                            // show: false
+                            labelBoxBorderColor: "#fff"
+                        },
+                    colors: ["#a7b5c5", "#30a0eb"],
+                    xaxis: {
+                        ticks: [[1, "JAN"], [2, "FEB"], [3, "MAR"], [4,"APR"], [5,"MAY"], [6,"JUN"],
+                               [7,"JUL"], [8,"AUG"], [9,"SEP"], [10,"OCT"], [11,"NOV"], [12,"DEC"]],
+                        font: {
+                            size: 12,
+                            family: "Open Sans, Arial",
+                            variant: "small-caps",
+                            color: "#697695"
+                        }
+                    },
+                    yaxis: {
+                        ticks:3,
+                        tickDecimals: 0,
+                        font: {size:12, color: "#9da3a9"}
+                    }
+                 });
+
+            function showTooltip(x, y, contents) {
+                $('<div id="tooltip">' + contents + '</div>').css( {
+                    position: 'absolute',
+                    display: 'none',
+                    top: y - 30,
+                    left: x - 50,
+                    color: "#fff",
+                    padding: '2px 5px',
+                    'border-radius': '6px',
+                    'background-color': '#000',
+                    opacity: 0.80
+                }).appendTo("body").fadeIn(200);
+            }
+
+            var previousPoint = null;
+            $("#statsChart").bind("plothover", function (event, pos, item) {
+                if (item) {
+                    if (previousPoint != item.dataIndex) {
+                        previousPoint = item.dataIndex;
+
+                        $("#tooltip").remove();
+                        var x = item.datapoint[0].toFixed(0),
+                            y = item.datapoint[1].toFixed(0);
+
+                        var month = item.series.xaxis.ticks[item.dataIndex].label;
+
+                        showTooltip(item.pageX, item.pageY,
+                                    item.series.label + " of " + month + ": " + y);
+                    }
+                }
+                else {
+                    $("#tooltip").remove();
+                    previousPoint = null;
+                }
+            });
+        });
+    </script>
+
+{% block scripts %}
 
 {% endblock %}
 </body>
